<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">Gym 3000</string>
    <string name="menuTitle">Go to GYM right now</string>

    <string name="editMessage">edit_message</string>
    <string name="training">Today training</string>

    <string name="menu_layout_settings">Settings</string>
    <string name="menu_layout_add_program">Change program</string>
    <string name="menu_layout_add_workout">Change workout</string>
    <string name="program_layout_history">History</string>
    <string name="history_layout_workout">Workout</string>

    <string name="settings">Settings</string>
    <string name="menu_settings">Menu settings</string>
    <string name="program_settings">Program settings</string>

    <string name="change_workouts">Change workouts</string>
    <string name="change_programs">Change programs</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="picture">Picture</string>
    <string name="title_dot">Title:</string>
    <string name="description_dot">Description:</string>
    <string name="picture_dot">Picture:</string>
    <string name="save_program">Save program</string>
    <string name="save_exercise_type">Save exercise type</string>


    <dimen name="title_padding">20sp</dimen>
    <dimen name="text_padding">5sp</dimen>

    <dimen name="text_size_small">15sp</dimen>
    <dimen name="text_size_middle">20sp</dimen>
    <dimen name="text_size_big">25sp</dimen>


    <string name="save_attempt_button">Save Attempt</string>
    <string name="start_exercise_button">Start Exercise</string>
    <string name="choose_exercise_type_text">Choose your type</string>
    <string name="count_text">count(s)</string>
    <string name="kg_text">kg</string>
</resources>